# imlight

./: .gitignore  LICENSE  pyproject.toml  roadmap.md
docs/: layers.md
imlight/: app.py  main.py  viz.py  window.py
imlight/fixture/: __init__.py  all.py  etc.py  generic.py
