[project]
name = "imlight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.10.0",
    "jedi>=0.19.2",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pyopengl>=3.1.10",
    "requests>=2.32.5",
    "slimgui>=0.5.2",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
]

[project.scripts]
imlight = "imlight.main:main"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true
